--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 		</div>
 
 		<div class="center-flex-container">
-<!-- 			<img src="lime1.png" style="float: right; width:6%"> -->			
+		<img src="lime1.png" class = "left-lime">
+			<img src="lime1.png" class = "right-lime">
+
 			<h3 class="center-allign" style="width: 70%">
 			<span class = "text">
 			Чтобы оформить заказ через Instagram, нужно:<br>
@@ -56,8 +58,7 @@
 			<br>🍃Если Вы из региона, то отправим Вам почтой или в пункт выдачи Сдэк после оплаты в этот же или на следующий день
 			<br>🍃Пришлем Вам трек для отслеживания посылки
 			</span>		
-<!-- 			<img src="lime1.png" style="float: right; width:6%">
- -->
+
 		</h3>
 		</div>
 
